masteralb/main.css
* {
  margin: 0;
  padding: 0;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

body {
  background: url("images/background.jpg") no-repeat center center fixed;
  background-size: cover;
  height: 100vh;
  font-family: "Titillium Web", sans-serif;
  font-weight: 400;
}

.container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}

.container__forms {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-evenly;
      -ms-flex-pack: space-evenly;
          justify-content: space-evenly;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-flow: row wrap;
          flex-flow: row wrap;
}

.container--logo {
  margin-top: 20px;
}

.container--column {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.logo {
  opacity: 0.4;
  max-width: 100%;
}

.item {
  margin-left: 20px;
  margin-right: 20px;
  margin-bottom: 40px;
  max-width: 100%;
  text-align: center;
}

.item__title {
  color: white;
  text-align: center;
  font-size: 1.9rem;
  font-weight: 400;
  padding: 10px;
  margin: 30px;
  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.8);
}

.form {
  background-color: white;
  border-radius: 1px;
  -webkit-box-shadow: 0 0 0 20px rgba(0, 0, 0, 0.397);
          box-shadow: 0 0 0 20px rgba(0, 0, 0, 0.397);
  padding: 10px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.form__field {
  -webkit-box-pack: left;
      -ms-flex-pack: left;
          justify-content: left;
  margin: 10px;
  padding-left: 10px;
  width: 330px;
  height: 40px;
  border-radius: 2px;
  border: 1px solid #c6c6c6;
  position: relative;
}

.form__field:before {
  content: "";
  position: absolute;
  width: 1px;
  height: 31px;
  background-color: #c6c6c6;
  margin-left: 34px;
  top: 50%;
  -webkit-transform: translate(0%, -50%);
          transform: translate(0%, -50%);
}

.form__field--password{
  font-family: "Font Awesome 5 Free";  
  color: #c6c6c6;
  font-size: 20px;
  margin-right:10px;
}

.form__field--password:hover{
  color: #89abe2;
}

.form__field--message {
  margin: 10px;
  width: 330px;
  height: 200px;
  border-radius: 2px;
  border: 1px solid #c6c6c6;
  padding: 10px;
}

.btn:focus,
.field__input--checkbox:focus,
.form__field:focus-within,
.form__field--message:focus-within,
.form__field:hover,
.form__field--message:hover {
  border: 1px solid #89abe2;
}

.form__field--checkbox {
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  width: 330px;
  height: 20px;
  margin-top: 10px;
  margin-bottom: 10px;
}

.form__field--small{
    padding: 0;
    width:100%;
}

.form__field--btn{
  width: 330px;
  height: 50px;
  margin: 10px;
}

.field__input--checkbox {
  border: 1px solid #c6c6c6;
  border-radius: 3px;
  outline: none;
  min-width: 20px;
  height: 20px;
  margin: 0;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.field__input--checkbox:checked::after {
  position: absolute;
  content: "";
  width: 10px;
  height: 10px;
  color: transparent;
  background-color: #2dce18;
  border-radius: 3px;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
          transform: translate(-50%, -50%);
}

.field__text {
  width: 100%;
  margin-left:10px;
  font-size: 14.7px;
  color: #afafaf;
  text-align: left;
}

.field__location {
  width: 100%;
  height: 100%;
  border: 0px none;
  outline: none;
  color: #afafaf;
  padding-left: 10px;
  margin-left:10px;
  -webkit-box-shadow: none;
          box-shadow: none;
  background-color: white; 
}

.field__input {
  width: 100%;
  border: 0px;
  outline: none;
  margin-left: 20px;
}

.field__textarea {
  overflow: auto;
  width: 100%;
  height: 100%;
  outline: none;
  resize: none;
  border: 0px;
  padding: 0px;
}

::-webkit-input-placeholder {
  color: #afafaf;
}

:-ms-input-placeholder {
  color: #afafaf;
}

::placeholder {
  color: #afafaf;
  font-family: "Titillium Web", sans-serif;
}

.btn {
  cursor: pointer;
  height: 50px;
  width: 100%;
  color: white;
  background: -webkit-gradient(linear, left top, left bottom, from(#a2d73e), to(#2dce18));
  background: linear-gradient(#a2d73e, #2dce18);
  border-style: none;
  border-radius: 3px;
  font-family: "Titillium Web", sans-serif;
  font-weight: 400;
  font-size: 1.4rem;
  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.8);
  outline: none;
}

.btn:hover{
  background: -webkit-gradient(linear, left top, left bottom, from(#a2d73e), to(#188b08));
  background: linear-gradient(#a2d73e, #188b08);
}

.btn--right{
  background: #bcdb97;
  cursor: not-allowed;
  margin-left: 10px;
}

.btn--right:hover{
  background: #bcdb97;
}

.btn--left{
  margin-right: 10px;
}

.btn--disagree{
  background: -webkit-gradient(linear, left top, left bottom, from(#f29b9b), to(#ea3131));
  background: linear-gradient(#f29b9b, #ea3131);
  cursor: pointer;
}

.btn--disagree:hover{
  background: -webkit-gradient(linear, left top, left bottom, from(#f29b9b), to(#af1919e5));
  background: linear-gradient(#f29b9b, #af1919e5);
}

.error,
.error:hover {
  -webkit-animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
          animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
  -webkit-transform: translate3d(0, 0, 0);
          transform: translate3d(0, 0, 0);
  -webkit-backface-visibility: hidden;
          backface-visibility: hidden;
  -webkit-perspective: 1000px;
          perspective: 1000px;
  border-color: #af1919e5;
}

@-webkit-keyframes shake {
  10%, 90% {
    -webkit-transform: translate3d(-1px, 0, 0);
            transform: translate3d(-1px, 0, 0);
  }
  
  20%, 80% {
    -webkit-transform: translate3d(2px, 0, 0);
            transform: translate3d(2px, 0, 0);
  }

  30%, 50%, 70% {
    -webkit-transform: translate3d(-4px, 0, 0);
            transform: translate3d(-4px, 0, 0);
  }

  40%, 60% {
    -webkit-transform: translate3d(4px, 0, 0);
            transform: translate3d(4px, 0, 0);
  }
}

@keyframes shake {
  10%, 90% {
    -webkit-transform: translate3d(-1px, 0, 0);
            transform: translate3d(-1px, 0, 0);
  }
  
  20%, 80% {
    -webkit-transform: translate3d(2px, 0, 0);
            transform: translate3d(2px, 0, 0);
  }

  30%, 50%, 70% {
    -webkit-transform: translate3d(-4px, 0, 0);
            transform: translate3d(-4px, 0, 0);
  }

  40%, 60% {
    -webkit-transform: translate3d(4px, 0, 0);
            transform: translate3d(4px, 0, 0);
  }
}


@media screen and (max-width: 480px) {
  * {
    margin: 0;
    padding: 0;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
  }

  .logo {
    opacity: 0.4;
    max-width: 90%;
    max-height: 90%;
  }

  .item {
    max-width: 90%;
  }

  .item__title{
    margin:20px;
  }

  .container__forms {
    max-width: 100%;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
  }

  .container--column {
    max-width: 90%;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    margin-bottom: 20px;
  }

  .form {
    border-radius: 0.5px;
  }

  .form__field {
    -webkit-box-pack: space-evenly;
    -ms-flex-pack: space-evenly;
    justify-content: space-evenly;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    max-width: 90%;
  }

  .form__field:before {
    left: 9px;
  }

  .form__field--message {
    max-width: 90%;
  }

  .field__input {
    max-width: 80%;
  }  

  .form__field--checkbox {
    -webkit-box-pack: space-evenly;
    -ms-flex-pack: space-evenly;
    justify-content: space-evenly;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    padding-left: 10px;
    max-width: 100%;
  }

  .field__text {
    max-width: 90%;
    font-size: 14px;
    margin-right: 10px;
  }

  ::-webkit-input-placeholder{
    font-size: 12px;
  }

  :-ms-input-placeholder{
    font-size: 12px;
  }

  ::placeholder{
    font-size: 12px;
  }

  .btn{
    font-size:1.1rem;
  }

  .form__field--btn{
    max-width: 90%;
  }
}

